// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BearerLoader renders basic forward intHost 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <script>
    !function(){var t=window.bearer=window.bearer||[];t.initialize||(t.invoked?window.console&&console.error&&console.error("Bearer snippet included twice."):(t.invoked=!0,t.load=function(e,o){var r=document.createElement("script");r.type="text/javascript",r.async=!0,r.src="https://int.bearer.sh/v2/"+e+"/bearer.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(r,n),t._loadOptions=o,t.clientId=e},t.SNIPPET_VERSION="1.0.0",t.load("abc123")))}();
  </script>
</HelmetWrapper>
`;

exports[`BearerLoader renders basic loader tag 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <script>
    !function(){var t=window.bearer=window.bearer||[];t.initialize||(t.invoked?window.console&&console.error&&console.error("Bearer snippet included twice."):(t.invoked=!0,t.load=function(e,o){var r=document.createElement("script");r.type="text/javascript",r.async=!0,r.src="https://int.bearer.sh/v1/"+e+"/bearer.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(r,n),t._loadOptions=o,t.clientId=e},t.SNIPPET_VERSION="1.0.0",t.load("abc123")))}();
  </script>
</HelmetWrapper>
`;
